--- a/config/optional/feeds.feed_type.mo_unit_types.yml
+++ b/config/optional/feeds.feed_type.mo_unit_types.yml
@@ -8,7 +8,7 @@ dependencies:
   module:
     - feeds_ex
     - taxonomy
-id: mo_
+id: mo_unit_types
 label: 'MO Enhedstyper'
 description: 'Enhedstyper fra MO'
 help: ''
