--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
     "drupal/feeds_ex": "^1.0@alpha",
     "vlucas/phpdotenv": "^4.0",
     "webmozart/path-util": "2.3.0",
+    "drupal/keycloak": "^1.5",
     "zaporylie/composer-drupal-optimizations": "1.2.0"
   },
   "extra": {
