--- a/config/install/openid_connect.settings.keycloak.yml
+++ b/config/install/openid_connect.settings.keycloak.yml
@@ -2,7 +2,7 @@ enabled: true
 settings:
   redirect_url: ''
   client_id: egir
-  client_secret: 115027c4-68f3-41d8-b92d-d91abd36fc55
+  client_secret:
   keycloak_base: 'http://192.168.64.1:8081/auth'
   keycloak_realm: mo
   userinfo_update_email: false
