--- a/config/optional/feeds.feed_type.mo_org_units_to_taxonomy.yml
+++ b/config/optional/feeds.feed_type.mo_org_units_to_taxonomy.yml
@@ -10,7 +10,7 @@ dependencies:
     - os2forms_forloeb
     - taxonomy
 id: mo_org_units_to_taxonomy
-label: ' Org Units to Taxonomy'
+label: ' Org Units'
 description: 'Import Org Units from GIR'
 help: "In order to import organizational units from GIR, you must create a feed with this Feed Type and as the feed URL specify \r\n\r\n<gir-toplevel-url>/service/o/<org-uuid>/ou/\r\n\r\nThis will import all organizational units and make them available when creating new units or externals."
 import_period: 3600
