--- a/config/optional/webform.webform.disable_organizational_unit.yml
+++ b/config/optional/webform.webform.disable_organizational_unit.yml
@@ -1,4 +1,6 @@
 langcode: en
+status: open
+dependencies: {  }
 open: null
 close: null
 weight: 0
@@ -9,7 +11,69 @@ id: disable_organizational_unit
 title: 'Disable Organizational Unit'
 description: 'Send a request for disabling an organizational unit and submit it for approval.'
 category: GIR
-elements: "search:\n  '#type': fieldset\n  '#title': Search\n  search_for_organizational_unit:\n    '#type': search\n    '#title': 'Search for Organizational Unit'\norganizational_data:\n  '#type': fieldset\n  '#title': 'Organizational Data'\n  name:\n    '#type': textfield\n    '#title': Name\n    '#disabled': true\n    '#readonly': true\n    '#required': true\n  parent_unit:\n    '#type': webform_term_select\n    '#title': 'Parent Unit'\n    '#disabled': true\n    '#prepopulate': true\n    '#vocabulary': consultancies\n    '#breadcrumb_delimiter': ''\n  location:\n    '#type': webform_term_select\n    '#title': Location\n    '#disabled': true\n    '#prepopulate': true\n    '#vocabulary': consultancies\n    '#breadcrumb_delimiter': ''\nend_date:\n  '#type': date\n  '#title': 'End date'\n  '#date_date_format': ''\napproval_information:\n  '#type': fieldset\n  '#title': 'Approval Information'\n  time_limit:\n    '#type': date\n    '#title': 'Time Limit'\n    '#date_date_format': ''\n  justification:\n    '#type': textfield\n    '#title': Justification\n  approver:\n    '#type': webform_entity_select\n    '#title': Approver\n    '#target_type': user\n    '#selection_handler': 'default:user'\n    '#selection_settings':\n      include_anonymous: false\n      filter:\n        type: _none"
+elements: |
+  search:
+    '#type': fieldset
+    '#title': Search
+    organizational_unit:
+      '#type': entity_autocomplete
+      '#title': 'Organizational Unit'
+      '#target_type': taxonomy_term
+      '#selection_handler': 'default:taxonomy_term'
+      '#selection_settings':
+        target_bundles:
+          orgunit: orgunit
+        sort:
+          field: name
+          direction: ASC
+        auto_create: false
+        auto_create_bundle: orgunit
+  organizational_data:
+    '#type': fieldset
+    '#title': 'Organizational Data'
+    name:
+      '#type': textfield
+      '#title': Name
+      '#disabled': true
+      '#readonly': true
+      '#required': true
+    parent_unit:
+      '#type': webform_term_select
+      '#title': 'Parent Unit'
+      '#disabled': true
+      '#prepopulate': true
+      '#vocabulary': consultancies
+      '#breadcrumb_delimiter': ''
+    location:
+      '#type': webform_term_select
+      '#title': Location
+      '#disabled': true
+      '#prepopulate': true
+      '#vocabulary': consultancies
+      '#breadcrumb_delimiter': ''
+  end_date:
+    '#type': date
+    '#title': 'End date'
+    '#date_date_format': ''
+  approval_information:
+    '#type': fieldset
+    '#title': 'Approval Information'
+    time_limit:
+      '#type': date
+      '#title': 'Time Limit'
+      '#date_date_format': ''
+    justification:
+      '#type': textfield
+      '#title': Justification
+    approver:
+      '#type': webform_entity_select
+      '#title': Approver
+      '#target_type': user
+      '#selection_handler': 'default:user'
+      '#selection_settings':
+        include_anonymous: false
+        filter:
+          type: _none
 css: ''
 javascript: ''
 settings:
