--- a/config/optional/webform.webform.request_new_external.yml
+++ b/config/optional/webform.webform.request_new_external.yml
@@ -13,7 +13,96 @@ id: request_new_external
 title: 'Request New External'
 description: 'Create an entity for a person joining GIR, along with the corresponding organizational&nbsp; identities.'
 category: GIR
-elements: "personal_data:\n  '#type': fieldset\n  '#title': 'Personal Data'\n  name:\n    '#type': webform_name\n    '#title': Name\n    '#title__access': false\n    '#first__required': true\n    '#middle__access': false\n    '#last__required': true\n    '#suffix__access': false\n    '#degree__access': false\n    '#flexbox': '1'\n  consultancy:\n    '#type': webform_term_select\n    '#title': Consultancy\n    '#vocabulary': consultancies\n    '#breadcrumb_delimiter': ''\n  telephone_number:\n    '#type': tel\n    '#title': 'Telephone Number'\n  email_address:\n    '#type': email\n    '#title': 'Email Address'\nemployment_data:\n  '#type': fieldset\n  '#title': 'Employment Data'\n  cost_center:\n    '#type': webform_term_select\n    '#title': 'Cost Center'\n    '#vocabulary': cost_center\n    '#breadcrumb_delimiter': ''\n  org_unit:\n    '#type': webform_term_select\n    '#title': 'Org Unit'\n    '#vocabulary': orgunit\n    '#breadcrumb_delimiter': ''\n  location:\n    '#type': webform_term_select\n    '#title': Location\n    '#vocabulary': location\n    '#breadcrumb_delimiter': ''\n  consultant_type:\n    '#type': webform_term_select\n    '#title': 'Consultant Type'\n    '#vocabulary': consultant_type\n    '#breadcrumb_delimiter': ''\n  start_date:\n    '#type': date\n    '#title': 'Start date'\n    '#date_date_format': ''\n  end_date:\n    '#type': date\n    '#title': 'End date'\n    '#date_date_format': ''\napproval_information:\n  '#type': fieldset\n  '#title': 'Approval Information'\n  time_limit:\n    '#type': date\n    '#title': 'Time Limit'\n    '#date_date_format': ''\n  justification:\n    '#type': textfield\n    '#title': Justification\n  approver:\n    '#type': webform_entity_select\n    '#title': Approver\n    '#target_type': user\n    '#selection_handler': 'default:user'\n    '#selection_settings':\n      include_anonymous: true\n      filter:\n        type: _none"
+elements: |
+  personal_data:
+    '#type': fieldset
+    '#title': 'Personal Data'
+    name:
+      '#type': webform_name
+      '#title': Name
+      '#title__access': false
+      '#first__required': true
+      '#middle__access': false
+      '#last__required': true
+      '#suffix__access': false
+      '#degree__access': false
+      '#flexbox': '1'
+    telephone_number:
+      '#type': tel
+      '#title': 'Telephone Number'
+    email_address:
+      '#type': email
+      '#title': 'Email Address'
+    consultancy:
+      '#type': entity_autocomplete
+      '#title': Consultancy
+      '#target_type': taxonomy_term
+      '#selection_handler': 'default:taxonomy_term'
+      '#selection_settings':
+        target_bundles:
+          consultancy: consultancy
+        auto_create: false
+        auto_create_bundle: consultancy
+  employment_data:
+    '#type': fieldset
+    '#title': 'Employment Data'
+    location:
+      '#type': webform_term_select
+      '#title': Location
+      '#vocabulary': location
+      '#breadcrumb_delimiter': ''
+    cost_center:
+      '#type': entity_autocomplete
+      '#title': 'Cost Center'
+      '#target_type': taxonomy_term
+      '#selection_handler': 'default:taxonomy_term'
+      '#selection_settings':
+        target_bundles:
+          cost_center: cost_center
+        auto_create: false
+        auto_create_bundle: cost_center
+    organizational_unit:
+      '#type': entity_autocomplete
+      '#title': 'Organizational Unit'
+      '#target_type': taxonomy_term
+      '#selection_handler': 'default:taxonomy_term'
+      '#selection_settings':
+        target_bundles:
+          orgunit: orgunit
+        auto_create: false
+        auto_create_bundle: orgunit
+    consultant_type:
+      '#type': webform_term_select
+      '#title': 'Consultant Type'
+      '#vocabulary': consultant_type
+      '#breadcrumb_delimiter': ''
+    start_date:
+      '#type': date
+      '#title': 'Start date'
+      '#date_date_format': ''
+    end_date:
+      '#type': date
+      '#title': 'End date'
+      '#date_date_format': ''
+  approval_information:
+    '#type': fieldset
+    '#title': 'Approval Information'
+    time_limit:
+      '#type': date
+      '#title': 'Time Limit'
+      '#date_date_format': ''
+    justification:
+      '#type': textfield
+      '#title': Justification
+    approver:
+      '#type': webform_entity_select
+      '#title': Approver
+      '#target_type': user
+      '#selection_handler': 'default:user'
+      '#selection_settings':
+        include_anonymous: true
+        filter:
+          type: _none
 css: ''
 javascript: ''
 settings:
