--- a/config/optional/workflows.workflow.udgivelse_af_selvbetjeningsside.yml
+++ b/config/optional/workflows.workflow.udgivelse_af_selvbetjeningsside.yml
@@ -16,8 +16,8 @@ third_party_settings:
       republish: republish
     reviewer_transitions:
       republish: republish
-id: udgivelse_af_forlob_og_webformularer
-label: 'Udgivelse af forløb og webformularer'
+id: udgivelse_af_selvbetjeningsside
+label: 'Udgivelse af Selvbetjeningsside'
 type: content_moderation
 type_settings:
   states:
